# xenia-wire

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FOLLOW_UPS.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  SECURITY.md  SPEC.md
.github/workflows/: ci.yml
benches/: seal_open_throughput.rs
blog/: BLOG_POST_1.md  BLOG_POST_2.md  README.md
examples/: gen_test_vectors.rs  hello_xenia.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_observe_consent.rs  fuzz_open.rs  fuzz_open_frame.rs  fuzz_replay_window.rs
papers/: README.md  refs.bib  xenia-paper.md
plans/: OPEN_ISSUES_PLAN.md  REVIEW_DELTA_DRAFT_03.md  VIEWER_PLAN.md
plans/research/: VIEWER_RESEARCH.md
src/: consent.rs  error.rs  frame.rs  lib.rs  payload_types.rs  replay_window.rs  session.rs  wire.rs
test-vectors/: 01_hello_frame.envelope.hex  01_hello_frame.input.hex  01_hello_frame.txt  02_input_pointer.envelope.hex  02_input_pointer.input.hex  02_input_pointer.txt  03_empty_payload.envelope.hex  03_empty_payload.input.hex  03_empty_payload.txt  04_long_payload.envelope.hex  04_long_payload.input.hex  04_long_payload.txt  05_nonce_structure.envelopes.hex  05_nonce_structure.txt  06_lz4_frame.bincoded.hex  06_lz4_frame.envelope.hex  06_lz4_frame.lz4_compressed.hex  06_lz4_frame.txt  07_consent_request.envelope.hex  07_consent_request.input.hex  07_consent_request.txt  08_consent_response.envelope.hex  08_consent_response.input.hex  08_consent_response.txt  09_consent_revocation.envelope.hex  09_consent_revocation.input.hex  09_consent_revocation.txt  10_revocation_before_approval.txt  11_contradictory_response.txt  12_stale_response.txt  README.md
tests/: integration_consent.rs  integration_rekey_replay.rs  integration_roundtrip.rs  proptest_consent.proptest-regressions  proptest_consent.rs  proptest_wire.rs  smoke_fuzz.rs  test_vector_validation.rs  violation_vectors.rs
xenia-viewer-web/: Cargo.toml  README.md  serve-www.py
xenia-viewer-web/src/: lib.rs
xenia-viewer-web/www/: app.js  consent.html  consent.js  daemon.html  daemon.js  demo.html  demo.js  index.html  viewer.html  viewer.js
