[package]
name = "xenia-wire"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.75"
authors = ["Tristan Stoltz <tristan.stoltz@evolvingresonantcocreationism.com>"]
license = "Apache-2.0 OR MIT"
description = "PQC-sealed binary wire protocol for remote-control streams: ChaCha20-Poly1305 AEAD with epoch rotation, 64-slot sliding replay window, and optional LZ4-before-seal. Pre-alpha — do not use in production."
repository = "https://github.com/Luminous-Dynamics/xenia-wire"
homepage = "https://github.com/Luminous-Dynamics/xenia-wire"
documentation = "https://docs.rs/xenia-wire"
readme = "README.md"
keywords = ["aead", "chacha20poly1305", "remote-desktop", "replay-protection", "wire-protocol"]
categories = ["cryptography", "network-programming", "no-std::no-alloc"]
exclude = ["test-vectors/*.generated", ".github/**", "CHANGELOG.md"]

[features]
default = ["reference-frame"]
# Reference frame/input types that implement `Sealable`. Enabled by default so
# `cargo add xenia-wire` + the quick-start example works without flag wrangling.
reference-frame = []
# LZ4-before-AEAD compression path. Adds `seal_frame_lz4` / `open_frame_lz4`
# and the `PAYLOAD_TYPE_FRAME_LZ4` constant. See §LZ4-before-AEAD in SPEC.md
# for why compression MUST precede sealing (ciphertext is pseudorandom).
lz4 = ["dep:lz4_flex"]

[dependencies]
chacha20poly1305 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
rand = "0.8"
lz4_flex = { version = "0.11", default-features = false, features = ["safe-encode", "safe-decode"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"

[[bench]]
name = "seal_open_throughput"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
