[package]
name = "xenia-wire"
version = "0.2.0-alpha.3"
edition = "2021"
rust-version = "1.85"
authors = ["Tristan Stoltz <tristan.stoltz@evolvingresonantcocreationism.com>"]
license = "Apache-2.0 OR MIT"
description = "PQC-sealed binary wire protocol for remote-control streams: ChaCha20-Poly1305 AEAD with epoch rotation, configurable sliding replay window (64-1024 slots), optional LZ4-before-seal, and signed consent ceremony with mandatory per-session fingerprint (HKDF-SHA-256). Pre-alpha — do not use in production."
repository = "https://github.com/Luminous-Dynamics/xenia-wire"
homepage = "https://github.com/Luminous-Dynamics/xenia-wire"
documentation = "https://docs.rs/xenia-wire"
readme = "README.md"
keywords = ["aead", "chacha20poly1305", "remote-desktop", "replay-protection", "wire-protocol"]
categories = ["cryptography", "network-programming", "no-std::no-alloc"]
exclude = ["test-vectors/*.generated", ".github/**", "CHANGELOG.md", "fuzz/**"]

[workspace]
exclude = ["fuzz", "xenia-viewer-web"]

[features]
default = ["reference-frame"]
# Reference frame/input types that implement `Sealable`. Enabled by default so
# `cargo add xenia-wire` + the quick-start example works without flag wrangling.
reference-frame = []
# LZ4-before-AEAD compression path. Adds `seal_frame_lz4` / `open_frame_lz4`
# and the `PAYLOAD_TYPE_FRAME_LZ4` constant. See §LZ4-before-AEAD in SPEC.md
# for why compression MUST precede sealing (ciphertext is pseudorandom).
lz4 = ["dep:lz4_flex"]
# Consent ceremony: ConsentRequest/Response/Revocation payloads + Ed25519
# signing + session-level state machine (FRAME refused until consent;
# revocation terminates) + HKDF-SHA-256 session fingerprint binding.
# Corresponds to SPEC.md draft-03 §12.
consent = ["dep:ed25519-dalek", "dep:serde-big-array", "dep:hkdf", "dep:sha2"]

[dependencies]
chacha20poly1305 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
rand = "0.8"
lz4_flex = { version = "0.11", default-features = false, features = ["safe-encode", "safe-decode"], optional = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std", "zeroize", "rand_core"], optional = true }
serde-big-array = { version = "0.5", optional = true }
hkdf = { version = "0.12", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }

# wasm32 needs web-time for `Instant` (the std one panics on wasm32-unknown-unknown)
# and getrandom's "js" feature to source entropy from crypto.getRandomValues.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
web-time = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"
proptest = "1"
rand_chacha = "0.3"

[[bench]]
name = "seal_open_throughput"
harness = false
required-features = ["reference-frame"]

[[example]]
name = "hello_xenia"
required-features = ["reference-frame"]

[[example]]
name = "gen_test_vectors"
required-features = ["reference-frame"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
