[package]
name = "xenia-wire-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
arbitrary = { version = "1", features = ["derive"] }
xenia-wire = { path = "..", features = ["reference-frame", "lz4", "consent"] }

[[bin]]
name = "fuzz_open"
path = "fuzz_targets/fuzz_open.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_open_frame"
path = "fuzz_targets/fuzz_open_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_replay_window"
path = "fuzz_targets/fuzz_replay_window.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_observe_consent"
path = "fuzz_targets/fuzz_observe_consent.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
