[package]
name = "xenia-viewer-web"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.75"
authors = ["Tristan Stoltz <tristan.stoltz@evolvingresonantcocreationism.com>"]
license = "Apache-2.0 OR MIT"
description = "WebAssembly demo of the Xenia wire protocol — seal/open in the browser. Pre-alpha — do not use in production."
repository = "https://github.com/Luminous-Dynamics/xenia-wire"
homepage = "https://github.com/Luminous-Dynamics/xenia-wire"
readme = "README.md"
keywords = ["wasm", "xenia", "remote-desktop", "aead", "demo"]
categories = ["wasm", "cryptography"]
publish = false  # demo crate; not published to crates.io

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
xenia-wire = { path = "..", version = "0.2.0-alpha.3", features = ["consent"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1", optional = true }
# For decoding the daemon's RawFrame payload (shadow struct in lib.rs;
# matches xenia-peer-core's RawFrame byte-for-byte under bincode v1).
bincode = "1.3"
serde = { version = "1", features = ["derive"] }

[features]
default = ["panic-hook"]
panic-hook = ["dep:console_error_panic_hook"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
